<resources>
    <string name="app_name">Android-Libraries-Sandbox</string>
    <string name="loading">Loading…</string>
    <string name="select_library">Select library:</string>
    <string name="databinding">DataBinding</string>
    <string name="dagger_2">Dagger2</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
</resources>
