<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.shevart.android_libraries.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/select_library"
        android:textSize="27sp" />

    <Button
        android:id="@+id/btDataBinding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/databinding"/>

    <Button
        android:id="@+id/btDagger2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dagger_2"/>

</LinearLayout>
